:lipstick: add audio on background, fix font issues on mobile, clean some css

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -33,16 +33,23 @@
         margin-right: 50px;
     }
     &__center{
-        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
         .button--start, .title__venom {
             transition: opacity 0.3s;
         }
     }
+    &__embed{
+        display: none;
+    }
     &__footer{
         display: flex;
         justify-content: space-between;
         padding: 20px;
+        align-items: center;
         img{
             height: 30px;
         }
@@ -68,15 +75,4 @@
     width: 100%;
     height: 100%;
     top: 0;
-}
-.title__venom{
-    font-family: 'Venom', sans-serif;
-    font-size: 290px;
-    color: $black;
-    letter-spacing: 70px;
-}
-.txt-paragraph{
-    font-family: 'Marvel', sans-serif;
-    font-size: 1rem;
-    color: $black;
 }
